# RecipeBox

backend/: main.py  pyproject.toml
backend/config/: database.py
backend/models/: Ingredient.py  Recipe.py  Step.py  Tag.py
backend/models/relationships/: ingredients_and_recipes.py  recipe_tags.py  steps_and_recipes.py
backend/routes/: ingredients.py  recipes.py  steps.py  tags.py
backend/schemas/: ingredient_schemas.py  recipe_schemas.py  step_schemas.py  tag_schemas.py
backend/utils/: data_conversion.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.sass
frontend/src/app/: app-routing.module.ts  app.module.ts  recipe.service.ts
frontend/src/app/dash/: dash.component.html  dash.component.sass  dash.component.ts
frontend/src/app/navbar/: navbar.component.html
frontend/src/app/recipe-display/: recipe-display.component.html  recipe-display.component.sass  recipe-display.component.ts
frontend/src/app/recipe-form/: recipe-form.component.ts
